--- a/index.html
+++ b/index.html
@@ -23561,11 +23561,24 @@ if($("humorizeName")?.checked){ task.name = playfulName(task.name); }
 
 function playfulName(s){ return s?.replace(/chart/i,"Chart Dragon") || s; }
     })();
-   
+   <script>
+  // Auto-backup to file once a day
+  const now = Date.now();
+  const last = +localStorage.getItem("lastBackupTime") || 0;
+  if (now - last > 24*60*60*1000) {
+    const data = localStorage.getItem("tasks") || "[]";
+    const blob = new Blob([data], {type:"application/json"});
+    const url = URL.createObjectURL(blob);
+    const a = document.createElement("a");
+    a.href = url;
+    a.download = `tasker-backup-${new Date().toISOString().split("T")[0]}.json`;
+    a.click();
+    URL.revokeObjectURL(url);
+    localStorage.setItem("lastBackupTime", now);
+  }
+</script>
 
   </script>
-  <!-- === Phase 4 – Win Log HUD === -->
-   <script src="./recover-tasks.js"></script>
 </body>
 </html>
 
