--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
       --page-gutter: clamp(1rem, 4vw, 2.25rem);
       --page-padding-top: clamp(1.5rem, 4vw, 2.5rem);
       --page-padding-bottom: 120px;
+      --command-bar-height: 96px;
+      --command-bar-safe-offset: env(safe-area-inset-bottom, 0px);
       /* Full-screen overlay width with 8px safe margins on both sides */
       --focus-shell-width: calc(100vw - 16px);
       --tasker-brand-gradient: linear-gradient(90deg, #7bd88f, #2dd4c3);
@@ -39,7 +41,8 @@
       font-weight: 400;
       line-height: 1.5;
       margin: 0;
-      padding: var(--page-padding-top) 0 var(--page-padding-bottom);
+      padding: var(--page-padding-top) 0
+        calc(var(--page-padding-bottom) + var(--command-bar-height) + var(--command-bar-safe-offset));
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -362,14 +365,6 @@
     .module-card.collapsed {
       opacity: 0.78;
       filter: saturate(0.85);
-    }
-
-    .schedule-card {
-      --schedule-card-inline: 1.35rem;
-      padding: 1.35rem var(--schedule-card-inline);
-      display: flex;
-      flex-direction: column;
-      gap: 1.5rem;
     }
 
     .neuro-checklist-card {
@@ -4715,23 +4710,30 @@ box-shadow: 0 18px 40px rgb a(15,23,42,0.25);
     }
 
     .command-bar {
-      position: fixed;
+      position: sticky;
       bottom: 0;
-      left: 50%;
-      transform: translate3d(-50%, 0, 0);
-      width: min(100%, 680px);
+      left: 0;
+      right: 0;
+      margin: 0 auto;
+      width: min(100%, 720px);
+      padding: 0.35rem clamp(0.75rem, 4vw, 1.35rem)
+        calc(0.35rem + var(--command-bar-safe-offset));
       background: rgba(8, 12, 18, 0.94);
       border-top: 1px solid rgba(147, 160, 170, 0.2);
+      border-radius: 18px 18px 0 0;
       box-shadow: 0 -12px 32px rgba(0, 0, 0, 0.5);
       display: grid;
-      grid-template-columns: repeat(4, 1fr);
+      grid-template-columns: repeat(auto-fit, minmax(0, 1fr));
+      align-items: center;
+      gap: 0.15rem;
+      min-height: var(--command-bar-height);
       z-index: 90;
       transition: opacity 200ms ease, transform 220ms ease;
     }
 
     .command-bar.is-hidden {
       opacity: 0;
-      transform: translate3d(-50%, 16px, 0);
+      transform: translate3d(0, 16px, 0);
       pointer-events: none;
     }
 
@@ -5884,6 +5886,26 @@ box-shadow: 0 18px 40px rgb a(15,23,42,0.25);
       display: flex;
       flex-direction: column;
       gap: var(--space-3);
+    }
+
+    .card.schedule-card {
+      --schedule-card-inline: 1.35rem;
+      padding: 1.35rem var(--schedule-card-inline);
+      gap: 1.5rem;
+      margin-bottom: calc(var(--command-bar-height) + 2.75rem);
+    }
+
+    @media (max-width: 560px) {
+      .card.schedule-card {
+        --schedule-card-inline: var(--page-gutter);
+        padding: 1.15rem var(--schedule-card-inline);
+        margin-inline: calc(-1 * var(--page-gutter));
+        width: calc(100% + (var(--page-gutter) * 2));
+        max-width: none;
+        border-radius: 0;
+        border-left: none;
+        border-right: none;
+      }
     }
 
     .card-head {
@@ -9168,19 +9190,7 @@ document.querySelectorAll(".neuro-checklist__item-label").forEach(label=>{
           </header>
           <div class="zone-body">
             <span id="reset-zone" class="zone-anchor" aria-hidden="true"></span>
-            <div class="routine-launch-card">
-              <button
-                id="routineOverlayToggle"
-                class="routine-launch-button"
-                type="button"
-                aria-haspopup="dialog"
-                aria-controls="routineOverlay"
-                aria-expanded="false"
-              >
-                <img src="Icons/Healthyhabits.png" alt="Open Healthy Habits routines" class="routine-launch-button__icon" />
-                <span class="routine-launch-button__label">Healthy Habits Routines</span>
-              </button>
-            </div>
+            
       <div id="routineEditSheet" class="routine-sheet" role="dialog" aria-modal="true" aria-labelledby="routineEditTitle">
         <div class="routine-sheet__scrim" data-routine-sheet-dismiss></div>
         <div class="routine-sheet__panel" role="document">
@@ -10201,6 +10211,17 @@ document.querySelectorAll(".neuro-checklist__item-label").forEach(label=>{
       <span class="command-link__icon" aria-hidden="true">🌙</span>
       <span>Reset</span>
     </a>
+    <button
+      id="routineOverlayToggle"
+      class="command-link"
+      type="button"
+      aria-haspopup="dialog"
+      aria-controls="routineOverlay"
+      aria-expanded="false"
+    >
+      <span class="command-link__icon" aria-hidden="true">💗</span>
+      <span>Routines</span>
+    </button>
   </nav>
 
   <script type="module" src="./taskStorage.js"></script>  
