--- a/index.html
+++ b/index.html
@@ -369,12 +369,12 @@
 
     .neuro-checklist-card {
       position: relative;
-      width: min(960px, calc(100% - var(--page-gutter) * 2));
-      margin: 1.5rem auto 0;
-      padding: clamp(1.25rem, 3vw, 1.75rem);
+      width: min(100%, var(--focus-shell-width));
+      margin: clamp(0.75rem, 2vw, 1rem) auto 0;
+      padding: clamp(1.1rem, 2.5vw, 1.65rem);
       display: flex;
       flex-direction: column;
-      gap: clamp(1rem, 2.5vw, 1.5rem);
+      gap: clamp(0.85rem, 2.2vw, 1.4rem);
     }
 
     #checklistControls {
@@ -4710,22 +4710,23 @@ box-shadow: 0 18px 40px rgb a(15,23,42,0.25);
     }
 
     .command-bar {
-      position: sticky;
+      position: fixed;
       bottom: 0;
       left: 0;
       right: 0;
-      margin: 0 auto;
-      width: min(100%, 720px);
-      padding: 0.35rem clamp(0.75rem, 4vw, 1.35rem)
-        calc(0.35rem + var(--command-bar-safe-offset));
+      margin: 0;
+      width: 100%;
+      max-width: none;
+      padding: 0.45rem clamp(0.85rem, 4vw, 1.5rem)
+        calc(0.45rem + var(--command-bar-safe-offset));
       background: rgba(8, 12, 18, 0.94);
       border-top: 1px solid rgba(147, 160, 170, 0.2);
-      border-radius: 18px 18px 0 0;
-      box-shadow: 0 -12px 32px rgba(0, 0, 0, 0.5);
+      border-radius: 0;
+      box-shadow: 0 -10px 28px rgba(0, 0, 0, 0.45);
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(0, 1fr));
       align-items: center;
-      gap: 0.15rem;
+      gap: 0.2rem;
       min-height: var(--command-bar-height);
       z-index: 90;
       transition: opacity 200ms ease, transform 220ms ease;
@@ -7767,21 +7768,21 @@ box-shadow: 0 18px 40px rgb a(15,23,42,0.25);
   margin: 0.25rem 0 0;
 }
 
-.quick-add-menu {
-  width: var(--focus-shell-width);
-  margin: 0.5rem auto 1.5rem;
-  padding: 0.75rem 1rem 1rem;
-  border-radius: 18px;
-  background: rgba(17, 23, 30, 0.82);
-  border: 1px solid rgba(147, 160, 170, 0.18);
-  box-shadow: 0 12px 32px rgba(0, 0, 0, 0.35);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 0.75rem;
-}
+    .quick-add-menu {
+      width: var(--focus-shell-width);
+      margin: 0.5rem auto 1.25rem;
+      padding: 0.65rem 0.9rem 0.75rem;
+      border-radius: 18px;
+      background: rgba(17, 23, 30, 0.82);
+      border: 1px solid rgba(147, 160, 170, 0.18);
+      box-shadow: 0 12px 32px rgba(0, 0, 0, 0.35);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 0.5rem;
+    }
 
-.quick-add-menu__label {
+    .quick-add-menu__label {
   margin: 0;
   font-size: 1.4rem;
   font-weight: 700;
@@ -7792,27 +7793,31 @@ box-shadow: 0 18px 40px rgb a(15,23,42,0.25);
   -webkit-text-fill-color: transparent;
 }
 
-.quick-add-menu__buttons {
-  display: flex;
-  gap: 0.75rem;
-  justify-content: center;
-  flex-wrap: wrap;
-}
+    .quick-add-menu__buttons {
+      display: grid;
+      grid-auto-flow: column;
+      grid-auto-columns: minmax(0, 1fr);
+      width: 100%;
+      gap: clamp(0.4rem, 1vw, 0.75rem);
+      align-items: center;
+      justify-items: center;
+    }
 
-.quick-add-button {
-  width: 56px;
-  height: 56px;
-  border-radius: 50%;
-  border: none;
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 1.75rem;
-  cursor: pointer;
-  transition: transform 140ms ease, box-shadow 200ms ease, filter 140ms ease;
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.35);
-  color: #0d1015;
-}
+    .quick-add-button {
+      width: clamp(44px, 8vw, 56px);
+      height: clamp(44px, 8vw, 56px);
+      border-radius: 50%;
+      border: none;
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      font-size: clamp(1.4rem, 4.8vw, 1.75rem);
+      cursor: pointer;
+      transition: transform 140ms ease, box-shadow 200ms ease, filter 140ms ease;
+      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.35);
+      color: #0d1015;
+      justify-self: center;
+    }
 
 .quick-add-button:hover {
   transform: translateY(-2px);
@@ -7854,22 +7859,23 @@ box-shadow: 0 18px 40px rgb a(15,23,42,0.25);
       background: linear-gradient(120deg, rgba(20, 28, 36, 0.9), rgba(12, 16, 22, 0.85));
       border: 1px solid rgba(255, 255, 255, 0.05);
       border-radius: 14px;
-      padding: 1.5rem 1.75rem;
-      margin: 0 auto 1.25rem;
+      padding: clamp(1.2rem, 3vw, 1.45rem) clamp(1.1rem, 4vw, 1.6rem)
+        clamp(1rem, 3vw, 1.25rem);
+      margin: 0 auto 1rem;
       width: min(92vw, 640px);
       box-shadow: 0 8px 24px rgba(0, 0, 0, 0.4);
       position: relative;
       display: flex;
       flex-direction: column;
-      gap: 1.25rem;
+      gap: clamp(0.75rem, 2vw, 1rem);
     }
 
     .app-header__top {
       display: flex;
-      align-items: center;
+      align-items: flex-start;
       justify-content: space-between;
-      gap: 1rem;
-      flex-wrap: wrap;
+      gap: 0.75rem;
+      padding-right: clamp(0.5rem, 3vw, 2.5rem);
     }
 
     .app-header__date-block {
@@ -7895,17 +7901,20 @@ box-shadow: 0 18px 40px rgb a(15,23,42,0.25);
 
     .app-header__actions {
       display: inline-flex;
-      align-items: center;
-      gap: 0.75rem;
+      flex-direction: column;
+      align-items: flex-end;
+      gap: 0.5rem;
       margin-left: auto;
       text-align: right;
-      flex-wrap: wrap;
-      justify-content: flex-end;
+    }
+
+    .app-header__actions .settings-trigger {
+      order: -1;
     }
 
     .app-header__main {
       display: grid;
-      gap: 0.4rem;
+      gap: 0.3rem;
       text-align: left;
     }
 
@@ -7926,7 +7935,7 @@ box-shadow: 0 18px 40px rgb a(15,23,42,0.25);
     }
 
     .app-header__title {
-      font-size: clamp(1.8rem, 4vw, 2.25rem);
+      font-size: clamp(1.75rem, 4vw, 2.2rem);
       font-weight: 700;
       letter-spacing: 0.02em;
       margin: 0;
@@ -7934,14 +7943,16 @@ box-shadow: 0 18px 40px rgb a(15,23,42,0.25);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       color: #7bd88f;
-      text-align: center;
+      text-align: left;
+      line-height: 1.15;
     }
 
     .app-header__subtitle {
       font-size: 1rem;
       color: #aeb7c8;
       margin: 0;
-      max-width: 40ch;
+      max-width: 48ch;
+      line-height: 1.4;
     }
 
     .billing-reminder {
@@ -8067,15 +8078,17 @@ box-shadow: 0 18px 40px rgb a(15,23,42,0.25);
 
     @media (max-width: 600px) {
       .app-header {
-        width: min(96vw, 460px);
-        padding: 1.25rem 1.35rem;
-        gap: 1rem;
+        width: min(var(--focus-shell-width), 480px);
+        padding: clamp(1rem, 6vw, 1.25rem) clamp(0.85rem, 4vw, 1.2rem)
+          clamp(0.85rem, 4vw, 1.1rem);
+        gap: 0.85rem;
       }
 
       .app-header__top {
         flex-direction: column;
-        align-items: flex-start;
-        gap: 0.75rem;
+        align-items: stretch;
+        gap: 0.6rem;
+        padding-right: 0;
       }
 
       .app-header__date-block {
@@ -8085,62 +8098,52 @@ box-shadow: 0 18px 40px rgb a(15,23,42,0.25);
       .app-header__actions {
         width: 100%;
         margin-left: 0;
-        justify-content: flex-end;
-        align-items: center;
-        gap: 0.75rem;
-        flex-wrap: wrap;
-      }
-
-      .billing-reminder {
-        order: 1;
-        flex: 1 1 100%;
-        justify-content: center;
-        text-align: center;
-        white-space: normal;
-        line-height: 1.3;
-        padding: 0.45rem 0.75rem;
+        align-items: flex-end;
+        gap: 0.45rem;
       }
 
       .settings-trigger {
-        flex: 0 0 auto;
+        align-self: flex-end;
+      }
+
+      .billing-reminder {
+        width: 100%;
+        text-align: right;
+        white-space: normal;
+        line-height: 1.3;
+        padding: 0.4rem 0.75rem;
       }
 
       .app-header__main {
-        text-align: center;
-        align-items: center;
+        text-align: left;
+        align-items: flex-start;
       }
 
       .app-header__badge {
-        margin-inline: auto;
-        justify-content: center;
+        margin-inline: 0;
+        justify-content: flex-start;
       }
 
       .app-header__title {
-        font-size: clamp(1.6rem, 8vw, 2.15rem);
+        font-size: clamp(1.6rem, 8vw, 2.05rem);
       }
 
       .app-header__subtitle {
-        max-width: 32ch;
+        max-width: 100%;
       }
     }
 
     @media (max-width: 420px) {
       .app-header {
-        padding: 1.1rem 1.1rem 1.25rem;
+        padding: clamp(0.95rem, 6vw, 1.1rem);
       }
 
       .app-header__actions {
-        flex-direction: column;
-        align-items: stretch;
-        gap: 0.5rem;
-      }
-
-      .settings-trigger {
-        align-self: center;
+        gap: 0.4rem;
       }
 
       .billing-reminder {
-        order: 2;
+        font-size: 0.85rem;
       }
     }
 
