--- a/index.html
+++ b/index.html
@@ -1004,7 +1004,7 @@ padding:1rem; box-shadow:0 18px 40px rgba(15,23,42,0.25); }
     .weekly-grid {
       display: grid;
       grid-template-columns: repeat(var(--weekly-grid-columns, 5), minmax(0, 1fr));
-      grid-template-rows: repeat(2, minmax(104px, 1fr));
+      grid-template-rows: repeat(var(--weekly-grid-rows, 2), minmax(104px, 1fr));
       width: 100%;
       border-radius: 18px;
       background: linear-gradient(180deg, rgba(12, 18, 27, 0.94), rgba(9, 13, 20, 0.92));
@@ -1030,11 +1030,29 @@ padding:1rem; box-shadow:0 18px 40px rgba(15,23,42,0.25); }
       min-height: 104px;
     }
 
-    .weekly-grid__cell:nth-child(5n) {
+    .weekly-grid:not(.weekly-grid--with-weekend) .weekly-grid__cell:nth-child(5n) {
       border-right: none;
     }
 
-    .weekly-grid__cell:nth-last-child(-n + 5) {
+    .weekly-grid:not(.weekly-grid--with-weekend) .weekly-grid__cell:nth-last-child(-n + 5) {
+      border-bottom: none;
+    }
+
+    .weekly-grid--with-weekend {
+      --weekly-grid-columns: 7;
+    }
+
+    .weekly-grid--with-weekend .weekly-grid__cell:nth-child(7n) {
+      border-right: none;
+    }
+
+    .weekly-grid--with-weekend .weekly-grid__cell:nth-last-child(-n + 7) {
+      border-bottom: none;
+    }
+
+    .weekly-grid__cell--weekend {
+      padding: 1.1rem 0.85rem 1.35rem;
+      border-right: none;
       border-bottom: none;
     }
 
@@ -1146,6 +1164,91 @@ padding:1rem; box-shadow:0 18px 40px rgba(15,23,42,0.25); }
 
     .weekly-grid__manage:active {
       transform: scale(0.96);
+    }
+
+    .weekend-card {
+      display: flex;
+      flex-direction: column;
+      gap: 0.65rem;
+      background: linear-gradient(180deg, rgba(15, 23, 36, 0.9), rgba(11, 17, 26, 0.92));
+      border-radius: 16px;
+      border: 1px solid rgba(148, 163, 184, 0.28);
+      box-shadow: inset 0 0 0 1px rgba(15, 23, 42, 0.35);
+      padding: 1rem 0.9rem 1rem;
+      min-height: 100%;
+    }
+
+    .weekend-card__title {
+      font-size: 1rem;
+      font-weight: 600;
+      letter-spacing: 0.02em;
+      color: rgba(226, 232, 240, 0.96);
+    }
+
+    .weekend-card__note {
+      margin: 0;
+      font-size: 0.85rem;
+      line-height: 1.5;
+      color: rgba(203, 213, 225, 0.78);
+    }
+
+    .weekend-card__badge {
+      align-self: flex-start;
+      padding: 0.32rem 0.7rem;
+      border-radius: 999px;
+      font-size: 0.68rem;
+      font-weight: 700;
+      letter-spacing: 0.16em;
+      text-transform: uppercase;
+      border: 1px solid rgba(148, 163, 184, 0.32);
+      background: rgba(148, 163, 184, 0.18);
+      color: rgba(226, 232, 240, 0.9);
+      transition: background 160ms ease, color 160ms ease, border-color 160ms ease;
+    }
+
+    .weekend-card__badge--on {
+      background: rgba(45, 212, 191, 0.18);
+      border-color: rgba(45, 212, 191, 0.42);
+      color: rgba(16, 185, 129, 0.9);
+    }
+
+    .weekend-card__badge--off {
+      background: rgba(100, 116, 139, 0.16);
+      border-color: rgba(100, 116, 139, 0.38);
+      color: rgba(148, 163, 184, 0.82);
+    }
+
+    .weekend-card__toggle {
+      margin-top: auto;
+      align-self: flex-start;
+      padding: 0.6rem 1rem;
+      border-radius: 12px;
+      border: 1px solid rgba(148, 163, 184, 0.35);
+      background: rgba(23, 32, 44, 0.88);
+      color: rgba(226, 232, 240, 0.94);
+      font-size: 0.85rem;
+      font-weight: 600;
+      letter-spacing: 0.04em;
+      text-transform: uppercase;
+      cursor: pointer;
+      transition: border-color 160ms ease, background 160ms ease, color 160ms ease,
+        box-shadow 160ms ease;
+    }
+
+    .weekend-card__toggle:hover,
+    .weekend-card__toggle:focus-visible {
+      border-color: rgba(45, 212, 195, 0.6);
+      background: rgba(31, 45, 62, 0.95);
+      color: #f8fafc;
+      outline: none;
+      box-shadow: 0 0 0 2px rgba(45, 212, 195, 0.25);
+    }
+
+    .weekend-card__toggle--active {
+      background: rgba(20, 83, 78, 0.4);
+      border-color: rgba(45, 212, 195, 0.6);
+      color: rgba(45, 212, 195, 0.95);
+      box-shadow: 0 0 0 1px rgba(45, 212, 195, 0.4) inset;
     }
 
     .weekly-grid__time {
